--- a/package.json
+++ b/package.json
@@ -10,12 +10,8 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@reduxjs/toolkit": "^2.2.5",
     "@tailwindcss/vite": "^4.1.16",
-    "lucide-react": "^0.552.0",
-    "react": "^19.1.1",
-    "react-dom": "^19.1.1",
-    "react-router-dom": "^7.9.5",
-    "tailwindcss": "^4.1.16",
     "@tiptap/core": "^2.11.5",
     "@tiptap/extension-blockquote": "^2.10.3",
     "@tiptap/extension-character-count": "^2.10.3",
@@ -38,11 +34,19 @@
     "@tiptap/extension-youtube": "^2.11.5",
     "@tiptap/pm": "^2.11.5",
     "@tiptap/react": "^2.11.5",
-    "@tiptap/starter-kit": "^2.11.5"
+    "@tiptap/starter-kit": "^2.11.5",
+    "lucide-react": "^0.552.0",
+    "qs": "^6.14.0",
+    "react": "^19.1.1",
+    "react-dom": "^19.1.1",
+    "react-redux": "^9.0.2",
+    "react-router-dom": "^7.9.5",
+    "tailwindcss": "^4.1.16"
   },
   "devDependencies": {
     "@eslint/js": "^9.36.0",
     "@types/node": "^24.6.0",
+    "@types/qs": "^6.14.0",
     "@types/react": "^19.1.16",
     "@types/react-dom": "^19.1.9",
     "@vitejs/plugin-react-swc": "^4.1.0",
