--- a/package.json
+++ b/package.json
@@ -39,6 +39,7 @@
     "qs": "^6.14.0",
     "react": "^19.1.1",
     "react-dom": "^19.1.1",
+    "react-hot-toast": "^2.6.0",
     "react-redux": "^9.0.2",
     "react-router-dom": "^7.9.5",
     "tailwindcss": "^4.1.16"
